@@ -5,9 +5,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 public class Base64ImageUtil {
 	/**
@@ -24,10 +22,11 @@ public class Base64ImageUtil {
 		if (imgStr == null){
 			return false;
 		}
-		BASE64Decoder decoder = new BASE64Decoder();
+
+		Base64.Decoder decoder = Base64.getDecoder();
 		try {
 			// 解密
-			byte[] b = decoder.decodeBuffer(imgStr);
+			byte[] b = decoder.decode(imgStr);
 			// 处理数据
 			for (int i = 0; i < b.length; ++i) {
 				if (b[i] < 0) {
@@ -64,8 +63,8 @@ public class Base64ImageUtil {
 	    }
 	    
 	    // 加密
-	    BASE64Encoder encoder = new BASE64Encoder();
-	    return encoder.encode(data);
+	    Base64.Encoder encoder = Base64.getEncoder();
+	    return encoder.encodeToString(data);
 	}
 	
 	public static void main(String[] args) {
